--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "wrangler dev",
     "start": "wrangler dev",
     "test": "vitest",
+    "test:once": "vitest --run",
     "test:debug": "node --inspect-brk ./node_modules/vitest/dist/cli.js --no-file-parallelism run",
     "cf-typegen": "wrangler types"
   },
